PVS Studio code quality audit

--- a/Botticelli.Server.FrontNew/Pages/Login.razor
+++ b/Botticelli.Server.FrontNew/Pages/Login.razor
@@ -76,7 +76,7 @@
             public async Task DoReset(string userName)
             {
                 var result = await SessionClient.ResetPassword(userName);
-                if (result != default && result.UserMessage.ToLowerInvariant() != "success")
+                if (result.UserMessage.ToLowerInvariant() != "success")
                 {
                     _error.UserMessage = result.UserMessage;
                 }
